<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Staunt Browser</string>
    <string name="search_or_enter_url">Search with Staunt or enter address</string>
    <string name="new_tab">New Tab</string>
    <string name="close_tab">Close Tab</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="downloads">Downloads</string>
    <string name="share">Share</string>
    <string name="find_in_page">Find in page</string>
    <string name="desktop_site">Desktop site</string>
    <string name="incognito_mode">Incognito mode</string>
    <string name="ad_blocker">Ad Blocker</string>
    <string name="clear_data">Clear browsing data</string>
    <string name="about">About Staunt Browser</string>
    <string name="version">Version 2.0.0</string>
    <string name="tabs_count">%d tabs</string>
    <string name="blocked_count">%d blocked</string>
</resources>